[project]
name = "pypowsybl-to-busestoken"
version = "0.1.0"
description = "Data conversion pipeline from pypowsybl networks to Bus Tokens for Graph Transformer / Foundation Model applications."
authors = [
    { name = "Van Tuan DANG" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "pypowsybl>=1.14",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
networkx = ["networkx>=3.0"]
pyg     = ["torch>=2.0", "torch_geometric>=2.4"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "coverage>=7.0",
    "pytest-cov>=4.0",
    "flake8>=7.0.0",
    "Flake8-pyproject==1.2.3",
    "black==24.8.0",
    "mypy==1.13.0",
    "pandas-stubs>=2.2",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-copybutton",
    "nbsphinx",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pypowsybl_to_busestoken"]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "E701"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
